deploy/phonebookapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebookapp-deploy
  labels:
    app: phonebook-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phonebook-app
  template:
    metadata:
      labels:
        app: phonebook-app
    spec:
      containers:
      - image: phonebook-app_phonebook-app:latest
        name: phonebook-pod
        ports:
        - containerPort: 8181
          name: http
          protocol: TCP
