deploy/phonebookmysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebookmysql-deploy
  labels:
    app: phonebook-mysql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phonebook-mysql
  template:
    metadata:
      labels:
        app: phonebook-mysql
    spec:
      containers:
      - image:  dstefansky/phonebook-mysql:latest
        name: phonebookmysql-pod
        ports:
        - containerPort: 3306
          name: http
          protocol: TCP
