deploy/pod.yml
# Create a pod and expose port 8080
apiVersion: v1
kind: Pod
metadata:
  name: whale-pod
  labels:
    app: whale-app
spec:
  containers:
    - image: dstefansky/whale-app:latest
      name: whale-pod
      ports:
      - containerPort: 5000
        name: http
        protocol: TCP
