deploy/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whale-deploy
  labels:
    run: whale-app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: whale-app
  template:
    metadata:
      labels:
        run: whale-app
    spec:
      containers:
      - name: whale-pod
        image: dstefansky/whale-app:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 5000
