deploy/loadbalancerservice.yml
apiVersion: v1
kind: Service
metadata:  
  name: pb-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:    
    app: phonebook-app
  type: LoadBalancer
  ports:  
  - name: http
    port: 80
    targetPort: 8181
    nodePort: 30036
    protocol: TCP
