deploy/loadbalancerservicemetrics.yml
apiVersion: v1
kind: Service
metadata:  
  name: whale-monitor-svc
spec:
  selector:    
    app: whale-app
  type: LoadBalancer
  ports:  
  - name: http
    port: 80
    targetPort: 5001
    nodePort: 30037
    protocol: TCP
