deploy/service.yml
apiVersion: v1
kind: Service
metadata:  
  name: whale-app-service
spec:
  selector:    
    app: whale-app
  type: NodePort
  ports:  
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30036
    protocol: TCP
